# pima-API

./: .dockerignore  Dockerfile  README.md  container_build_and_run.sh  docker-compose.yaml  enviroment.yaml  pyproject.toml  report.json  requirements.txt
.dvc/: config
.github/workflows/: report.yaml
.ipynb_checkpoints/: debug_preprocessing.ipynb  grid_search.ipynb  load_pickle.ipynb  proto-checkpoint.ipynb
docker/: Dockerfile  build_localmode.sh
fastapi/: .dockerignore  Dockerfile  app.py
notebooks/: data_preparation.ipynb  data_prepetion.ipynb  grid_search_random_forest.ipynb  random_search_xgboost.ipynb
pima_api/: __main__.py  app.py  constant.py  fastapi_pima.py
pima_api/conf/: config.yaml  hydra.yaml
pima_api/conf/model/: random_forest.yaml  xgboost.yaml
pima_api/data/: .gitignore  diabetes.txt  pima.csv.dvc  preprocess.py  template.py
pima_api/fastapi/: Dockerfile  app.py
pima_api/model/: hydrajob_localmode.py  job.py  model.joblib  produce.py  rf_job.sh  trainjob_localmode.py  xgb_job.sh
pima_api/streamlit/: Dockerfile  app.py
streamlit/: Dockerfile  app.py
