[project]
name = "pima-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib~=3.8.1",
    "numpy~=1.26.2",
    "pandas~=2.1.3",
    "scikit-learn~=1.3.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "dvc[gdrive]>=3.61.0",
    "fastapi[standard]>=0.116.1",
    "hydra-core>=1.3.2",
    "ruff>=0.12.7",
]
