[project]
name = "pima-api"
version = "0.1.0"
description = ""
authors = [
    {name = "applic",email = "a@b.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.8.1,<3.9.0)",
    "numpy (>=1.26.2,<1.27.0)",
    "pandas (>=2.1.3,<2.2.0)",
    "scikit-learn (>=1.3.2,<1.4.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
packages = [{ include = "pima_api"}]


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gdrive"], version = "^3.62.0"}
fastapi = {extras = ["standard"], version = "^0.116.1"}
hydra-core = "^1.3.2"
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
